Quorum3/Library/Tests/IfStatement/Pass/IfStatementOneCondition_ConstEqual_True.quorum
class Main
    action Main
        boolean a = false

        if false = false
            a = true
        end

        output a
    end
end