Quorum3/Library/Tests/IfStatement/Fail/ElseIfNumber.quorum
class Main
    action Main
        integer result = 0
        number a = 1.0

        if true
            result = 1
        elseif a
            result = 2
        end

        output result
    end
end